# country-list-project

./: README.md
.github/workflows/: backend-tests.yml
country-list-application/: docker-compose.yml
country-list-application/backend/: backend.dockerfile
country-list-application/backend/app/: .gitignore  pyproject.toml
country-list-application/backend/app/app/: main.py
country-list-application/backend/app/app/api/api_v1/: api.py
country-list-application/backend/app/app/api/api_v1/endpoints/: country_list.py  root.py
country-list-application/backend/app/app/core/: config.py
country-list-application/backend/app/app/graph/: country_graph.py  enums.py  topology.py
country-list-application/backend/app/app/schemas/: __init__.py  country_list.py  message.py
country-list-application/backend/app/app/tests/api/api_v1/: test_country_list.py  test_root.py
country-list-application/backend/app/scripts/: lint.sh  test.sh
country-list-application/server/: .dockerignore  nginx.conf  server.dockerfile
docs/: mkdocs.yml
docs/docs/: about.md  index.md  tech.md
tests/: README.md  test_country_list.py
