[tool.poetry]
name = "country-list-backend"
version = "0.1.0"
description = ""
authors = ["Broden Wanner <broden.wanner@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
networkx = "^2.6.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.9.3"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
